--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,9 @@
 <!-- Loop over each object in the projects array -->
-{{#each BlogPosts}}
+{{#each BlogPosts as |BlogPosts|}}
 <div class="row mb-4 BlogPosts">
   <div class="col-md-5">
     <h2>
-      <a href="/project/{{id}}">{{title}} {{contents}}</a>
+      <a href="/blogposts/{{id}}">{{BlogPosts.title}} {{BlogPosts.contents}}</a>
     </h2>
     <p>Created by {{user.name}} on {{format_date date_created}}</p>
   </div>
