--- a/views/layouts/blogposts.handlebars
+++ b/views/layouts/blogposts.handlebars
@@ -30,7 +30,7 @@
     {{#each BlogPosts as |BlogPost|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/BlogPost/{{BlogPost.id}}">{{BlogPost.name}}</a></h4>
+        <h4><a href="/blogposts/{{BlogPost.id}}">{{BlogPost.name}}</a></h4>
       </div>
       <div class="col-md-4">
         <button class="btn btn-sm btn-danger" data-id="{{BlogPost.id}}">DELETE</button>
