--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,18 +1,43 @@
-<!-- Loop over each object in the projects array -->
-{{#each BlogPosts as |BlogPosts|}}
-<div class="row mb-4 BlogPosts">
-  <div class="col-md-5">
-    <h2>
-      <a href="/blogposts/{{id}}">{{BlogPosts.title}} {{BlogPosts.contents}}</a>
-    </h2>
-    <p>Created by {{user.name}} on {{format_date date_created}}</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tech Blog</title>
+</head>
+<body>
+  <nav>
+    <a href="/">Home</a>
+    {{#if loggedIn}}
+    <a href="/dashboard">Dashboard</a>
+    <a href="/logout">Logout</a>
+    {{else}}
+    <a href="/login">Login</a>
+    <a href="/signup">Sign Up</a>
+    {{/if}}
+  </nav>
+
+  <h1>Welcome to TechBlogs</h1>
+
+  <!-- Loop over each object in the blogPosts array -->
+  {{#each blogPosts}}
+  <div class="row mb-4 BlogPosts">
+    <div class="col-md-5">
+      <h2>
+        <a href="/blogposts/{{id}}">{{title}} {{contents}}</a>
+      </h2>
+      <p>Created by {{User.name}} on {{format_date date_created}}</p>
+    </div>
+    <div class="col-md-7">
+      <h3>Comments:</h3>
+      {{#each Comments}}
+      <p>{{description}}</p>
+      {{/each}}
+    </div>
   </div>
-  <div class="col-md-7">
-    <h3>Comments:</h3>
-    {{#each comments}}
-    <p>{{description}}</p>
-    {{/each}}
-  </div>
-</div>
-{{/each}}
+  {{/each}}
+
+  <script src="./js/BlogPosts.js"></script>
+</body>
+</html>
 
