--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,31 +7,29 @@
 </head>
 <body>
   <nav>
-    <a href="/">Home</a>
     {{#if loggedIn}}
     <a href="/dashboard">Dashboard</a>
     <a href="/logout">Logout</a>
     {{else}}
-    <a href="/login">Login</a>
-    <a href="/signup">Sign Up</a>
+    <a href="/login">Sign Up</a>
     {{/if}}
   </nav>
 
   <h1>Welcome to TechBlogs</h1>
 
   <!-- Loop over each object in the blogPosts array -->
-  {{#each blogPosts}}
+  {{#each blogPosts as |blogpost|}}
   <div class="row mb-4 BlogPosts">
     <div class="col-md-5">
       <h2>
-        <a href="/blogposts/{{id}}">{{title}} {{contents}}</a>
+        <a href="/blogposts/{{blogpost.id}}">{{blogpost.title}} {{blogpost.contents}}</a>
       </h2>
       <p>Created by {{User.name}} on {{format_date date_created}}</p>
     </div>
     <div class="col-md-7">
       <h3>Comments:</h3>
       {{#each Comments}}
-      <p>{{description}}</p>
+      <p>{{Comments.description}}</p>
       {{/each}}
     </div>
   </div>
