--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -18,18 +18,18 @@
   <h1>Welcome to TechBlogs</h1>
 
   <!-- Loop over each object in the blogPosts array -->
-  {{#each blogPosts as |blogpost|}}
+  {{#each BlogPosts }}
   <div class="row mb-4 BlogPosts">
     <div class="col-md-5">
       <h2>
-        <a href="/blogposts/{{blogpost.id}}">{{blogpost.title}} {{blogpost.contents}}</a>
+        <a href="/blogposts/{{id}}">{{title}} {{contents}}</a>
       </h2>
-      <p>Created by {{User.name}} on {{format_date date_created}}</p>
+      <p>Created by {{name}} on {{format_date date_created}}</p>
     </div>
     <div class="col-md-7">
       <h3>Comments:</h3>
       {{#each Comments}}
-      <p>{{Comments.description}}</p>
+      <p>{{description}}</p>
       {{/each}}
     </div>
   </div>
