--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -22,7 +22,7 @@
   <div class="row mb-4 BlogPosts">
     <div class="col-md-5">
       <h2>
-        <a href="/blogposts/{{id}}">{{title}} {{contents}}</a>
+        <a href="/blogposts/{{body.id}}">{{body.title}} {{contents}}</a>
       </h2>
       <p>Created by {{name}} on {{format_date date_created}}</p>
     </div>
