added login button

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,6 +11,7 @@
     <a href="/dashboard">Dashboard</a>
     <a href="/logout">Logout</a>
     {{else}}
+    <a href="/login">Login</a>
     <a href="/login">Sign Up</a>
     {{/if}}
   </nav>
